--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
     margin: 0;
     padding: 0;
     font-size: 16px;
-    background-image: url('../Background.png');
+    background-image: url('../Background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
